Update index.html at 1849

--- a/index.html
+++ b/index.html
@@ -918,15 +918,15 @@
     </footer>
     
     <script>
-        // Firebase 配置 - 需要替換為您自己的配置
+        // Firebase 配置 - 從Firebase控制台獲取的配置
         const firebaseConfig = {
-          // 請在這裡放置您從Firebase控制台獲取的配置
-          apiKey: "您的API密鑰",
-          authDomain: "您的項目.firebaseapp.com",
-          projectId: "您的項目ID",
-          storageBucket: "您的項目.appspot.com",
-          messagingSenderId: "您的發送者ID",
-          appId: "您的應用ID"
+            apiKey: "AIzaSyBTUy_gb8Ej57OFgRl7OCftgk_Bcuszg00",
+            authDomain: "caligari-e2790.firebaseapp.com",
+            projectId: "caligari-e2790",
+            storageBucket: "caligari-e2790.firebasestorage.app",
+            messagingSenderId: "350560116623",
+            appId: "1:350560116623:web:718334afb82072262b35fa",
+            measurementId: "G-69H5NPMPR5"
         };
         
         // 初始化 Firebase
