--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>咖喱之家 - 會員忠誠度計劃</title>
+    <title>Caligari - 會員忠誠度計劃</title>
     <style>
         :root {
             --primary: #e65c00;
